# gki-env

./: .gitignore  5.15.patch  LICENSE  README.md  docker-24.04.sh  env.android13  env.android14  env.android15  justfile
.devcontainer/: Dockerfile  devcontainer.json  docker-24.04.sh
.github/workflows/: ci.yml
modules/: WORKSPACE
modules/cdevcpuinfo/: BUILD.bazel  Kbuild  Makefile  Makefile2  cdevcpuinfo.c  mountcpuinfo.c
modules/cpuinfo/: BUILD.bazel  Kbuild  Makefile  cpuinfo.c  cpuinfo_ftrace.c  cpuinfo_kprobe.c
modules/diamorphine/: Makefile  diamorphine.c
modules/ftrace/: BUILD.bazel  Kbuild  Makefile  ftrace.c
modules/hello/: BUILD.bazel  BUILD.cf.bazel  Kbuild  Makefile  hello.c
modules/hideso/: BUILD.bazel  Kbuild  Makefile  hideso.c
modules/kprobe/: BUILD.bazel  Kbuild  kprobe.c
modules/kprobemod/: BUILD.bazel  Kbuild  Makefile  kprobemod.c
modules/minisu/: .gitignore  Makefile  envsetup.sh  minisu.c  minisu.h  test.c  test_minisu.c  test_su_compat.c
modules/proccpuinfo/: BUILD.bazel  Kbuild  Makefile  mountcpuinfo.c  proccpuinfo.c
modules/sysmodule/: BUILD.bazel  Kbuild  Makefile  sysmodule.c
modules/untrace/: BUILD.bazel  Kbuild  Makefile  untrace.c
modules/uprobemod/: BUILD.bazel  Kbuild  Makefile  openat.c  uprobemod.c
patches/: fix_ksud_compat.patch
