# /* Copyright (c) 2025-2026 fei_cong(https://github.com/feicong/ebpf-course) */
load("//build/kernel/kleaf:kernel.bzl", "kernel_module", "kernel_modules_install")

filegroup(
    name = "lkm_sources",
    srcs = glob(
        [
            "**/*.c",
            "**/*.h",
            "Kbuild",
        ],
        exclude = [
            "BUILD.bazel*",
            "**/*.bzl",
            ".git/**",
        ],
    ),
)

kernel_module (
    name = "cpuinfo",
    srcs = [":lkm_sources"],
    outs = [
        "cpuinfo.ko",
    ],
    kernel_build = "//common:kernel_aarch64",
)

kernel_modules_install(
    name = "cpuinfo_install",
    kernel_build = "//common:kernel_aarch64",
    kernel_modules = [
        ":cpuinfo",
    ],
)
