# Copyright (c) 2025-2026 fei_cong(https://github.com/feicong/ebpf-course)
load("@//build/kernel/kleaf:kernel.bzl", "kernel_module", "kernel_modules_install")

# 向下面一样补丁visibility: android13-5.15-167/common-modules/virtual-device/BUILD.bazel
package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "lkm_sources",
    srcs = glob(
        [
            "**/*.c",
            "**/*.h",
            "Kbuild",
        ],
        exclude = [
            "BUILD.bazel*",
            "**/*.bzl",
            ".git/**",
        ],
    ),
)

kernel_module (
    name = "ftrace",
    srcs = [":lkm_sources"],
    outs = [
        "ftrace.ko",
    ],
    kernel_build = "//common-modules/virtual-device:virtual_device_x86_64",
)

kernel_modules_install(
    name = "ftrace_install",
    kernel_build = "//common-modules/virtual-device:virtual_device_x86_64",
    kernel_modules = [
        ":ftrace",
    ],
)

kernel_module (
    name = "ftrace_aarch64",
    srcs = [":lkm_sources"],
    outs = [
        "ftrace.ko",
    ],
    kernel_build = "//common-modules/virtual-device:virtual_device_aarch64",
)

kernel_modules_install(
    name = "ftrace_aarch64_install",
    kernel_build = "//common-modules/virtual-device:virtual_device_aarch64",
    kernel_modules = [
        ":ftrace",
    ],
)
