# /* Copyright (c) 2025-2026 fei_cong(https://github.com/feicong/ebpf-course) */
load("//build/kernel/kleaf:kernel.bzl", "kernel_module", "kernel_modules_install")

filegroup(
    name = "lkm_sources",
    srcs = glob(
        [
            "**/*.c",
            "**/*.h",
            "Kbuild",
        ],
        exclude = [
            "BUILD.bazel*",
            "**/*.bzl",
            ".git/**",
        ],
    ),
)

kernel_module (
    name = "hideso",
    srcs = [":lkm_sources"],
    outs = [
        "hideso.ko",
    ],
    kernel_build = "//common:kernel_x86_64",
)

kernel_modules_install(
    name = "hideso_install",
    kernel_build = "//common:kernel_x86_64",
    kernel_modules = [
        ":hideso",
    ],
)

kernel_module (
    name = "hideso_aarch64",
    srcs = [":lkm_sources"],
    outs = [
        "hideso.ko",
    ],
    kernel_build = "//common:kernel_aarch64",
)

kernel_modules_install(
    name = "hideso_aarch64_install",
    kernel_build = "//common:kernel_aarch64",
    kernel_modules = [
        ":hideso",
    ],
)
