# /* Copyright (c) 2025-2026 fei_cong(https://github.com/feicong/ebpf-course) */
load("//build/kernel/kleaf:kernel.bzl", "kernel_module", "kernel_modules_install")

filegroup(
    name = "lkm_sources",
    srcs = glob(
        [
            "**/*.c",
            "**/*.h",
            "Kbuild",
        ],
        exclude = [
            "BUILD.bazel*",
            "**/*.bzl",
            ".git/**",
        ],
    ),
)

kernel_module (
    name = "sysmodule",
    srcs = [":lkm_sources"],
    outs = [
        "sysmodule.ko",
    ],
    kernel_build = "//common:kernel_x86_64",
)

kernel_modules_install(
    name = "sysmodule_install",
    kernel_build = "//common:kernel_x86_64",
    kernel_modules = [
        ":sysmodule",
    ],
)

kernel_module (
    name = "sysmodule_aarch64",
    srcs = [":lkm_sources"],
    outs = [
        "sysmodule.ko",
    ],
    kernel_build = "//common:kernel_aarch64",
)

kernel_modules_install(
    name = "sysmodule_aarch64_install",
    kernel_build = "//common:kernel_aarch64",
    kernel_modules = [
        ":sysmodule",
    ],
)
